The following major changes have been made since 0.9.8:

 *) Support new longterm kernels 5.10.220+
 *) Re-support build without CONFIG_TRACEPOINTS (was broken in 0.9.8)


The following major changes have been made between LKRG 0.9.7 and 0.9.8:

 *) Add optional remote kernel message logging, including the sending component
    in LKRG itself and the receiving/logging counterpart in a userspace daemon,
    as well as additional utilities to generate a public/secret keypair and to
    process the logs, and documentation in LOGGING
 *) Add support for RHEL 8.8+
 *) RPM spec file improvements to make it work or properly fail in a wider set
    of circumstances, and to use the "weak-modules" script if available so that
    on RHEL and its rebuilds the same LKRG package build works across different
    kABI-compatible kernel revisions/builds
 *) More complete documentation of the build requirements


The following major changes have been made between LKRG 0.9.6 and 0.9.7:

 *) Support new mainline kernels 6.4 to 6.5.x, and hopefully beyond
 *) Support new RHEL 9.1 and 9.2 kernels, and hopefully beyond
 *) Add RPM spec file for Red Hat'ish distros (usable via "rpmbuild -tb" on our
    release tarball)
 *) Add Arch Linux's /usr/bin/modprobe path to usermodehelper allow list
 *) Bootup script changes
 *) Continuous Integration updates


The following major changes have been made between LKRG 0.9.5 and 0.9.6:

 *) Support new mainline kernels 6.1-rc*, 6.1, and hopefully beyond
 *) Support kernels 5.19 and beyond on AArch64
 *) Support new RHEL 8.6 update and RHEL 8.7 kernels
 *) Support new CentOS Stream 9 aka upcoming RHEL 9.2 kernels
 *) Add a couple of distros' default pathnames to usermodehelper allow list
 *) Validate tasks' real UIDs/GIDs even when effective ones pass validation
    (previously, this check was normally bypassed as an optimization)
 *) Add synchronization logic around sysctl updates and other module (un)loads