@@ -1,6 +1,7 @@
 The following major changes have been made since 0.9.8:
 
  *) Support new longterm kernels 5.10.220+
+ *) Support new CentOS Stream 9 kernel 5.14.0-470.el9 and beyond (to RHEL 9.5)
  *) Re-support build without CONFIG_TRACEPOINTS (was broken in 0.9.8)
 
 
